Change KTH logo

--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
 								<h5>PhD Candidate, Computer Science</h5>
 								<p>2019 - 2023 | KTH - Royal Institute of Technology, Stockholm, Sweden</p>
 							</header>
-							<p><span class="image left"><img src="images/logos/KTH_Logo.png" alt="" /></span>
+							<p><span class="image left"><img src="images/logos/KTH_Logo_nobg.png" alt="" /></span>
 								School of Electrical Engineering and Computer Science (EECS). <br />
 								Division of Robotics, Perception and Learning (RPL). <br />
-								Research on learning Behavior Trees for ease of use of robots operating in dynamic industrial environments.
+								Research on learning Behavior Trees for ease of use of robots operating in dynamic industrial environments. <br />
+								Third cycle courses on Machine Learning and Robotics.
 							</p>
 						</section>
 						<hr />
