Add projects and thesis

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 								Double Degree in the <a href="https://timeassociation.org/">T.I.M.E.</a> (Top International Managers in Engineering) Association. <br />
 								Digital Control, Control of Mechanical Systems (PID control), Systems Theory (state space control, LQ control), Estimation and Filtering (maximum likelihood estimator, Wiener filter, Kalman filter, Particle filter), Digital Signal Processing, Advanced Topics in Control (non linear control theory).
 							</p>
+							Master Thesis: <a href="http://hdl.handle.net/20.500.12608/26783">Navigation and Grasping with a Mobile Manipulator: from Simulation to Experimental Results</a>
 						</section>
 						<hr />
 						<section>
@@ -133,6 +134,8 @@
 								Double Degree in the <a href="https://timeassociation.org/">T.I.M.E.</a> (Top International Managers in Engineering) Association. <br />
 								Manipulator Robot Modelling, Advanced Programming (C++), Vision for Robotics, Non Linear Control and Observation, Intelligent Vehicle and Transport, Modelling and Control of Unmanned Systems (aerial/submarine), Middleware (ROS).
 							</p>
+							Student Project: <a href=https://github.com/matiov/matiov.github.io/blob/master/media/Robotics.pdf>Rénovation d'une maquette d'hélicoptère 3DOF</a><br />
+							Student Project: <a href=https://github.com/matiov/matiov.github.io/blob/master/media/Science%26Music.pdf>Influence de la musique sur les micro-organismes</a>
 						</section>
 						<hr />
 						<section>
@@ -141,9 +144,10 @@
 								<p>2015 - 2018 | Università degli Studi di Padova, Padova, Italy | 103/110</p>
 							</header>
 							<p><span class="image left"><img src="images/logos/Unipd_Logo.png" alt="" /></span>
-								Mathematical Analysis 1 and 2, General Physics 1 and 2, Linear Algebra and Geometry, Computer Architecture, Data Structure and Algorithms 1, Signals and Systems, Systems and Models, Statistical Data Analysis, Control Theory, Electronics, Digital Electronics, Microelectronics Laboratory, Telecommunications.</p>
+								Mathematical Analysis 1 and 2, General Physics 1 and 2, Linear Algebra and Geometry, Computer Architecture, Data Structure and Algorithms 1, Signals and Systems, Systems and Models, Statistical Data Analysis, Control Theory, Electronics, Digital Electronics, Microelectronics Laboratory, Telecommunications.
+							</p>
+							Bachelor Thesis: Amplificatori Audio di Potenza
 						</section>
-					</section>
 					</section>
 
 				<!-- Experience -->
@@ -155,7 +159,10 @@
 								<p>2019 - Present | ABB Corporate Research, Västerås, Sweden</p>
 							</header>
 							<p><span class="image left"><img src="images/logos/ABB_Logo.png" alt="" /></span>
-								Learning Behavior Trees for ease of use of robots operating in unpredictable industrial environments.</p>
+								Learning Behavior Trees for ease of use of robots.<br />
+								Competences: Python, ROS2, Git.<br />
+								Initiator of the <a href="https://wasp-sweden.org/research/research-arenas/wara-robotics/">WASP Research Arena</a> for Robotics.
+							</p>
 						</section>
 						<hr />
 						<section>
