Add student projects

--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
 								Research on learning Behavior Trees for ease of use of robots operating in dynamic industrial environments. <br />
 								Third cycle courses on Machine Learning and Robotics.
 							</p>
-						</section>
+							Student Project: <a href=https://www.youtube.com/watch?v=ldcq6FBHAwY>Vision-based Manipulation and Mobility</a><br />
+							Student Project: <a href=https://github.com/ostromann/heavy_metal_history>The History of Heavy Metal</a><br />
+							Student Project: <a href=https://github.com/Glolf/RottenBanana>RottenBanana - Movie recommender</a><br />
+							Student Project: <a href=https://www.youtube.com/watch?v=cyiVQpB7XYc>Dual Arm Manipulation: cooperative object carrying</a><br />
+							</section>
 						<hr />
 						<section>
 							<header>
@@ -162,6 +166,19 @@
 								Learning Behavior Trees for ease of use of robots.<br />
 								Competences: Python, ROS2, Git.<br />
 								Initiator of the <a href="https://wasp-sweden.org/research/research-arenas/wara-robotics/">WASP Research Arena</a> for Robotics.
+							</p>
+						</section>
+						<hr />
+						<section>
+							<header>
+								<h5>Summer School Tutorial</h5>
+								<p>August 2021, August 2022 | WASP, Sweden</p>
+							</header>
+							<p><span class="image left"><img src="images/logos/WASP_Logo.jpeg" alt="" /></span>
+								Set up of a tutorial about Behavior Trees in Robotics in the WASP Summer School. <br />
+								The task for the students is to design a Behavior Tree to control a robot solving a mobile manipulation task.
+								The robot has to pick items from two different conveyor belts and place them in a delivery station. The robot should recharge batteries when needed. <br />
+								The code repository for the tutorial is available <a href="https://wasp-sweden.org/research/research-arenas/wara-robotics/">here</a>.
 							</p>
 						</section>
 						<hr />
