Change link for paper

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<p><strong>Matteo Iovino</strong>, Julian Förster, Pietro Falco, Jen Jen Chung, Roland Siegwart, Christian Smith.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://arxiv.org/abs/2203.02994" class="image fit thumb"><img src="images/papers/humanoids22.png" alt="" /></a>
+								<a href="https://ieeexplore.ieee.org/abstract/document/10000088" class="image fit thumb"><img src="images/papers/humanoids22.png" alt="" /></a>
 								<h3>Interactive Disambiguation for Behavior Tree Execution</h3>
 								<p><strong>Matteo Iovino</strong>, Fethiye Irmak Doğan, Iolanda Leite, Christian Smith.</p>
 							</article>
