--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 								Research on learning Behavior Trees for ease of use of robots operating in dynamic industrial environments. <br />
 								Third cycle courses on Machine Learning and Robotics.
 							</p>
+							PhD Thesis: <a href=https://www.diva-portal.org/smash/record.jsf?pid=diva2%3A1758348&dswid=-1873>Learning Behavior Trees for Collaborative Robotics</a><br />
 							Student Project: <a href=https://www.youtube.com/watch?v=ldcq6FBHAwY>Vision-based Manipulation and Mobility</a><br />
 							Student Project: <a href=https://github.com/ostromann/heavy_metal_history>The History of Heavy Metal</a><br />
 							Student Project: <a href=https://github.com/Glolf/RottenBanana>RottenBanana - Movie recommender</a><br />
