Update position and CV

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/profile_picture.jpeg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/profile_picture2.jpg" alt="" width="140" height="160"/></a>
 					<!--<h1><strong>Launguages:</h1>-->
 					<h4>
 						<p><span class="image right"><img src="images/flags/ita.jpeg" alt="" /></span>Native</p>
@@ -35,7 +35,7 @@
 				<!-- Bio -->
 					<section id="one">
 						<header class="major">
-							<h2>Matteo Iovino, PhD in Robotics and AI.</h2>
+							<h2>Matteo Iovino, PhD.</h2>
 						</header>
 						<p>
 							Since starting university I have been attracted by the domains of Robotics and Automation.<br />
@@ -99,7 +99,7 @@
 						<h2>Education</h2>
 						<section>
 							<header>
-								<h5>PhD Candidate, Computer Science</h5>
+								<h5>PhD, Computer Science</h5>
 								<p>2019 - 2023 | KTH - Royal Institute of Technology, Stockholm, Sweden</p>
 							</header>
 							<p><span class="image left"><img src="images/logos/KTH_Logo_nobg.png" alt="" /></span>
@@ -165,8 +165,19 @@
 						<h2>Work Experience</h2>
 						<section>
 							<header>
-								<h5>Industrial PhD Candidate</h5>
-								<p>2019 - Present | ABB Corporate Research, Västerås, Sweden</p>
+								<h5>Scientist</h5>
+								<p>2023 - Present | ABB Corporate Research, Västerås, Sweden</p>
+							</header>
+							<p><span class="image left"><img src="images/logos/ABB_Logo.png" alt="" /></span>
+								Enhancing collaborative robots with AI-ready skills.<br />
+								Automatic and dynamic generation of task plans.<br />
+								Competences: Python, ROS2, Git.<br />
+							</p>
+						</section>
+						<section>
+							<header>
+								<h5>Industrial PhD, Computer Science</h5>
+								<p>2019 - 2023 | ABB Corporate Research, Västerås, Sweden</p>
 							</header>
 							<p><span class="image left"><img src="images/logos/ABB_Logo.png" alt="" /></span>
 								Learning Behavior Trees for ease of use of robots.<br />
@@ -576,6 +587,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
+						<li><a href="https://github.com/matiov/matiov.github.io/blob/master/media/CurriculumVitae.pdf" class="fas fa-address-card"></a></li>
 						<li><a href="https://twitter.com/MatteoIovino1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/matiov" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/matteo~iovino/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
