--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<p><strong>Matteo Iovino</strong>, Jonathan Styrud, Pietro Falco, Christian Smith.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://arxiv.org/abs/2209.07392" class="image fit thumb"><img src="images/papers/icra23.png" alt="" /></a>
+								<a href="https://ieeexplore.ieee.org/abstract/document/10160972" class="image fit thumb"><img src="images/papers/icra23.png" alt="" /></a>
 								<h3>On the programming effort required to generate Behavior Trees and Finite State Machines for robotic applications</h3>
 								<p><strong>Matteo Iovino</strong>, Julian Förster, Pietro Falco, Jen Jen Chung, Roland Siegwart, Christian Smith.</p>
 							</article>
