--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 							<p><span class="image left"><img src="images/logos/ABB_Logo.png" alt="" /></span>
 								Learning Behavior Trees for ease of use of robots.<br />
 								Competences: Python, ROS2, Git.<br />
-								Initiator of the <a href="https://wasp-sweden.org/research/research-arenas/wara-robotics/">WASP Research Arena</a> for Robotics.
+								Initiator of the <a href="https://wasp-sweden.org/industrial-cooperation/research-arenas/wara-robotics/">WASP Research Arena</a> for Robotics.
 							</p>
 						</section>
 						<hr />
@@ -195,7 +195,7 @@
 								Set up of a tutorial about Behavior Trees in Robotics in the WASP Summer School. <br />
 								The task for the students is to design a Behavior Tree to control a robot solving a mobile manipulation task.
 								The robot has to pick items from two different conveyor belts and place them in a delivery station. The robot should recharge batteries when needed. <br />
-								The code repository for the tutorial is available <a href="https://wasp-sweden.org/research/research-arenas/wara-robotics/">here</a>.
+								The code repository for the tutorial is available <a href="https://github.com/jstyrud/WASP-CBSS-BT">here</a>.
 							</p>
 						</section>
 						<hr />
