Change link for paper

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<h2>Publications</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://arxiv.org/abs/2303.11026" class="image fit thumb"><img src="images/papers/case23.png" alt="" /></a>
+								<a href="https://ieeexplore.ieee.org/abstract/document/10260363" class="image fit thumb"><img src="images/papers/case23.png" alt="" /></a>
 								<h3>A Framework for Learning Behavior Trees in Collaborative Robotic Applications</h3>
 								<p><strong>Matteo Iovino</strong>, Jonathan Styrud, Pietro Falco, Christian Smith.</p>
 							</article>
@@ -166,7 +166,7 @@
 						<section>
 							<header>
 								<h5>Scientist</h5>
-								<p>2023 - Present | ABB Corporate Research, Västerås, Sweden</p>
+								<p>June 2023 - Present | ABB Corporate Research, Västerås, Sweden</p>
 							</header>
 							<p><span class="image left"><img src="images/logos/ABB_Logo.png" alt="" /></span>
 								Enhancing collaborative robots with AI-ready skills.<br />
@@ -177,7 +177,7 @@
 						<section>
 							<header>
 								<h5>Industrial PhD, Computer Science</h5>
-								<p>2019 - 2023 | ABB Corporate Research, Västerås, Sweden</p>
+								<p>February 2019 - June 2023 | ABB Corporate Research, Västerås, Sweden</p>
 							</header>
 							<p><span class="image left"><img src="images/logos/ABB_Logo.png" alt="" /></span>
 								Learning Behavior Trees for ease of use of robots.<br />
