Update webpage with new structure and publications

--- a/index.html
+++ b/index.html
@@ -43,121 +43,10 @@
 							I am very comfortable with teamwork and always open to dialogue. I think that my best assets are rigor and work planning.
 						</p>
 						<ul class="actions">
-							<li><a href="#papers" class="button">Publications</a></li>
-							<li><a href="#school" class="button">Education</a></li>
 							<li><a href="#work" class="button">Work Experience</a></li>
+							<li><a href="#school" class="button">Education</a></li>
+							<li><a href="#papers" class="button">Publications</a></li>
 						</ul>
-					</section>
-
-				<!-- Papers -->
-					<section id="papers">
-						<h2>Publications</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ieeexplore.ieee.org/abstract/document/10260363" class="image fit thumb"><img src="images/papers/case23.png" alt="" /></a>
-								<h3>A Framework for Learning Behavior Trees in Collaborative Robotic Applications</h3>
-								<p><strong>Matteo Iovino</strong>, Jonathan Styrud, Pietro Falco, Christian Smith.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ieeexplore.ieee.org/abstract/document/10160972" class="image fit thumb"><img src="images/papers/icra23.png" alt="" /></a>
-								<h3>On the programming effort required to generate Behavior Trees and Finite State Machines for robotic applications</h3>
-								<p><strong>Matteo Iovino</strong>, Julian Förster, Pietro Falco, Jen Jen Chung, Roland Siegwart, Christian Smith.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ieeexplore.ieee.org/abstract/document/10000088" class="image fit thumb"><img src="images/papers/humanoids22.png" alt="" /></a>
-								<h3>Interactive Disambiguation for Behavior Tree Execution</h3>
-								<p><strong>Matteo Iovino</strong>, Fethiye Irmak Doğan, Iolanda Leite, Christian Smith.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ieeexplore.ieee.org/abstract/document/9900603" class="image fit thumb"><img src="images/papers/roman22.png" alt="" /></a>
-								<h3>Combining Context Awareness and Planning to Learn Behavior Trees from Demonstration</h3>
-								<p>Oscar Gustavsson, <strong>Matteo Iovino</strong>, Jonathan Styrud, Christian Smith.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ieeexplore.ieee.org/abstract/document/9812086" class="image fit thumb"><img src="images/papers/icra22.png" alt="" /></a>
-								<h3>Combining Planning and Learning of Behavior Trees for Robotic Assembly</h3>
-								<p>Jonathan Styrud, <strong>Matteo Iovino</strong>, Mikael Norrlöf, Mårten Björkman, Christian Smith.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://ieeexplore.ieee.org/abstract/document/9562088" class="image fit thumb"><img src="images/papers/icra21.png" alt="" /></a>
-								<h3>Learning behavior trees with genetic programming in unpredictable environments</h3>
-								<p><strong>Matteo Iovino</strong>, Jonathan Styrud, Pietro Falco, Christian Smith.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.sciencedirect.com/science/article/pii/S0921889022000513" class="image fit thumb"><img src="images/papers/survey.png" alt="" /></a>
-								<h3>A survey of Behavior Trees in robotics and AI</h3>
-								<p><strong>Matteo Iovino</strong>, Edvards Scukins, Jonathan Styrud, Petter Ögren, Christian Smith.</p>
-							</article>
-						</div>
-						<ul class="actions">
-							<li><a href="https://scholar.google.com/citations?user=dH2oc1QAAAAJ&hl=en" class="button">Google Scholar</a></li>
-						</ul>
-					</section>
-				
-				<!-- Education -->
-					<section id="school">
-						<h2>Education</h2>
-						<section>
-							<header>
-								<h5>PhD, Computer Science</h5>
-								<p>2019 - 2023 | KTH - Royal Institute of Technology, Stockholm, Sweden</p>
-							</header>
-							<p><span class="image left"><img src="images/logos/KTH_Logo_nobg.png" alt="" /></span>
-								School of Electrical Engineering and Computer Science (EECS). <br />
-								Division of Robotics, Perception and Learning (RPL). <br />
-								Research on learning Behavior Trees for ease of use of robots operating in dynamic industrial environments. <br />
-								Third cycle courses on Machine Learning and Robotics.
-							</p>
-							PhD Thesis: <a href=https://www.diva-portal.org/smash/record.jsf?pid=diva2%3A1758348&dswid=-1873>Learning Behavior Trees for Collaborative Robotics</a><br />
-							Student Project: <a href=https://www.youtube.com/watch?v=ldcq6FBHAwY>Vision-based Manipulation and Mobility</a><br />
-							Student Project: <a href=https://github.com/ostromann/heavy_metal_history>The History of Heavy Metal</a><br />
-							Student Project: <a href=https://github.com/Glolf/RottenBanana>RottenBanana - Movie recommender</a><br />
-							Student Project: <a href=https://www.youtube.com/watch?v=cyiVQpB7XYc>Dual Arm Manipulation: cooperative object carrying</a><br />
-							</section>
-						<hr />
-						<section>
-							<header>
-								<h5>Research Visit</h5>
-								<p>April 2022 - September 2022 | ETH Zurich, Zurich, Switzerland</p>
-							</header>
-							<p><span class="image left"><img src="images/logos/ETH_Logo.png" alt="" /></span>Autonomous System Lab (ASL), led by Prof. Roland Siegwart.</p>
-						</section>
-						<hr />
-						<section>
-							<header>
-								<h5>M.Sc. in Control System Engineering</h5>
-								<p>2015 - 2018 | Università degli Studi di Padova, Padova, Italy | 110/110 Cum Laude</p>
-							</header>
-							<p><span class="image left"><img src="images/logos/Unipd_Logo.png" alt="" /></span>
-								Double Degree in the <a href="https://timeassociation.org/">T.I.M.E.</a> (Top International Managers in Engineering) Association. <br />
-								Digital Control, Control of Mechanical Systems (PID control), Systems Theory (state space control, LQ control), Estimation and Filtering (maximum likelihood estimator, Wiener filter, Kalman filter, Particle filter), Digital Signal Processing, Advanced Topics in Control (non linear control theory).
-							</p>
-							Master Thesis: <a href="http://hdl.handle.net/20.500.12608/26783">Navigation and Grasping with a Mobile Manipulator: from Simulation to Experimental Results</a>
-						</section>
-						<hr />
-						<section>
-							<header>
-								<h5>M.Sc. in Engineering</h5>
-								<p>2016 - 2018 | École Centrale de Nantes, Nantes, France | Major: Robotics | GPA 3.82</p>
-							</header>
-							<p><span class="image left"><img src="images/logos/ECN_Logo.svg" alt="" /></span>
-								Double Degree in the <a href="https://timeassociation.org/">T.I.M.E.</a> (Top International Managers in Engineering) Association. <br />
-								Manipulator Robot Modelling, Advanced Programming (C++), Vision for Robotics, Non Linear Control and Observation, Intelligent Vehicle and Transport, Modelling and Control of Unmanned Systems (aerial/submarine), Middleware (ROS).
-							</p>
-							Student Project: <a href=https://github.com/matiov/matiov.github.io/blob/master/media/Robotics.pdf>Rénovation d'une maquette d'hélicoptère 3DOF</a><br />
-							Student Project: <a href=https://github.com/matiov/matiov.github.io/blob/master/media/Science%26Music.pdf>Influence de la musique sur les micro-organismes</a>
-						</section>
-						<hr />
-						<section>
-							<header>
-								<h5>B.Sc. in Information Engineering</h5>
-								<p>2015 - 2018 | Università degli Studi di Padova, Padova, Italy | 103/110</p>
-							</header>
-							<p><span class="image left"><img src="images/logos/Unipd_Logo.png" alt="" /></span>
-								Mathematical Analysis 1 and 2, General Physics 1 and 2, Linear Algebra and Geometry, Computer Architecture, Data Structure and Algorithms 1, Signals and Systems, Systems and Models, Statistical Data Analysis, Control Theory, Electronics, Digital Electronics, Microelectronics Laboratory, Telecommunications.
-							</p>
-							Bachelor Thesis: Amplificatori Audio di Potenza
-						</section>
 					</section>
 
 				<!-- Experience -->
@@ -169,9 +58,9 @@
 								<p>June 2023 - Present | ABB Corporate Research, Västerås, Sweden</p>
 							</header>
 							<p><span class="image left"><img src="images/logos/ABB_Logo.png" alt="" /></span>
+								Project Manager of <a href="https://wara-robotics.se/">WASP Research Arena</a> for Robotics.<br />
 								Enhancing collaborative robots with AI-ready skills.<br />
-								Automatic and dynamic generation of task plans.<br />
-								Competences: Python, ROS2, Git.<br />
+								Competences:  Project Management, Python, ROS2, Git.
 							</p>
 						</section>
 						<section>
@@ -182,7 +71,6 @@
 							<p><span class="image left"><img src="images/logos/ABB_Logo.png" alt="" /></span>
 								Learning Behavior Trees for ease of use of robots.<br />
 								Competences: Python, ROS2, Git.<br />
-								Initiator of the <a href="https://wasp-sweden.org/industrial-cooperation/research-arenas/wara-robotics/">WASP Research Arena</a> for Robotics.
 							</p>
 						</section>
 						<hr />
@@ -221,6 +109,132 @@
 							</p>
 						</section>
 					</section>
+
+				<!-- Education -->
+				<section id="school">
+					<h2>Education</h2>
+					<section>
+						<header>
+							<h5>PhD, Computer Science</h5>
+							<p>2019 - 2023 | KTH - Royal Institute of Technology, Stockholm, Sweden</p>
+						</header>
+						<p><span class="image left"><img src="images/logos/KTH_Logo_nobg.png" alt="" /></span>
+							School of Electrical Engineering and Computer Science (EECS). <br />
+							Division of Robotics, Perception and Learning (RPL). <br />
+							Research on learning Behavior Trees for ease of use of robots operating in dynamic industrial environments. <br />
+							Third cycle courses on Machine Learning and Robotics.
+						</p>
+						PhD Thesis: <a href=https://www.diva-portal.org/smash/record.jsf?pid=diva2%3A1758348&dswid=-1873>Learning Behavior Trees for Collaborative Robotics</a><br />
+						Student Project: <a href=https://www.youtube.com/watch?v=ldcq6FBHAwY>Vision-based Manipulation and Mobility</a><br />
+						Student Project: <a href=https://github.com/ostromann/heavy_metal_history>The History of Heavy Metal</a><br />
+						Student Project: <a href=https://github.com/Glolf/RottenBanana>RottenBanana - Movie recommender</a><br />
+						Student Project: <a href=https://www.youtube.com/watch?v=cyiVQpB7XYc>Dual Arm Manipulation: cooperative object carrying</a><br />
+						</section>
+					<hr />
+					<section>
+						<header>
+							<h5>Research Visit</h5>
+							<p>April 2022 - September 2022 | ETH Zurich, Zurich, Switzerland</p>
+						</header>
+						<p><span class="image left"><img src="images/logos/ETH_Logo.png" alt="" /></span>Autonomous System Lab (ASL), led by Prof. Roland Siegwart.</p>
+					</section>
+					<hr />
+					<section>
+						<header>
+							<h5>M.Sc. in Control System Engineering</h5>
+							<p>2015 - 2018 | Università degli Studi di Padova, Padova, Italy | 110/110 Cum Laude</p>
+						</header>
+						<p><span class="image left"><img src="images/logos/Unipd_Logo.png" alt="" /></span>
+							Double Degree in the <a href="https://timeassociation.org/">T.I.M.E.</a> (Top International Managers in Engineering) Association. <br />
+							Digital Control, Control of Mechanical Systems (PID control), Systems Theory (state space control, LQ control), Estimation and Filtering (maximum likelihood estimator, Wiener filter, Kalman filter, Particle filter), Digital Signal Processing, Advanced Topics in Control (non linear control theory).
+						</p>
+						Master Thesis: <a href="http://hdl.handle.net/20.500.12608/26783">Navigation and Grasping with a Mobile Manipulator: from Simulation to Experimental Results</a>
+					</section>
+					<hr />
+					<section>
+						<header>
+							<h5>M.Sc. in Engineering</h5>
+							<p>2016 - 2018 | École Centrale de Nantes, Nantes, France | Major: Robotics | GPA 3.82</p>
+						</header>
+						<p><span class="image left"><img src="images/logos/ECN_Logo.svg" alt="" /></span>
+							Double Degree in the <a href="https://timeassociation.org/">T.I.M.E.</a> (Top International Managers in Engineering) Association. <br />
+							Manipulator Robot Modelling, Advanced Programming (C++), Vision for Robotics, Non Linear Control and Observation, Intelligent Vehicle and Transport, Modelling and Control of Unmanned Systems (aerial/submarine), Middleware (ROS).
+						</p>
+						Student Project: <a href=https://github.com/matiov/matiov.github.io/blob/master/media/Robotics.pdf>Rénovation d'une maquette d'hélicoptère 3DOF</a><br />
+						Student Project: <a href=https://github.com/matiov/matiov.github.io/blob/master/media/Science%26Music.pdf>Influence de la musique sur les micro-organismes</a>
+					</section>
+					<hr />
+					<section>
+						<header>
+							<h5>B.Sc. in Information Engineering</h5>
+							<p>2015 - 2018 | Università degli Studi di Padova, Padova, Italy | 103/110</p>
+						</header>
+						<p><span class="image left"><img src="images/logos/Unipd_Logo.png" alt="" /></span>
+							Mathematical Analysis 1 and 2, General Physics 1 and 2, Linear Algebra and Geometry, Computer Architecture, Data Structure and Algorithms 1, Signals and Systems, Systems and Models, Statistical Data Analysis, Control Theory, Electronics, Digital Electronics, Microelectronics Laboratory, Telecommunications.
+						</p>
+						Bachelor Thesis: Amplificatori Audio di Potenza
+					</section>
+				</section>
+
+				<!-- Papers -->
+				<section id="papers">
+					<h2>Publications</h2>
+					<div class="row">
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://arxiv.org/pdf/2409.13356" class="image fit thumb"><img src="images/papers/icra25.png" alt="" /></a>
+							<h3>Automatic Behavior Tree Expansion with LLMs for Robotic Manipulation</h3>
+							<p>Jonathan Styrud, <strong>Matteo Iovino</strong>, Mikael Norrlöf, Mårten Björkman, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://arxiv.org/abs/2403.19602" class="image fit thumb"><img src="images/papers/case24.png" alt="" /></a>
+							<h3>Behavior Trees in Industrial Applications: A Case Study in Underground Explosive Charging</h3>
+							<p>Mattias Hallen, <strong>Matteo Iovino</strong>, Shiva Sander-Tavallaey, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://arxiv.org/abs/2405.16137" class="image fit thumb"><img src="images/papers/tase24.png" alt="" /></a>
+							<h3>Comparison between Behavior Trees and Finite State Machines</h3>
+							<p><strong>Matteo Iovino</strong>, Julian Förster, Pietro Falco, Jen Jen Chung, Roland Siegwart, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://ieeexplore.ieee.org/abstract/document/10260363" class="image fit thumb"><img src="images/papers/case23.png" alt="" /></a>
+							<h3>A Framework for Learning Behavior Trees in Collaborative Robotic Applications</h3>
+							<p><strong>Matteo Iovino</strong>, Jonathan Styrud, Pietro Falco, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://ieeexplore.ieee.org/abstract/document/10160972" class="image fit thumb"><img src="images/papers/icra23.png" alt="" /></a>
+							<h3>On the programming effort required to generate Behavior Trees and Finite State Machines for robotic applications</h3>
+							<p><strong>Matteo Iovino</strong>, Julian Förster, Pietro Falco, Jen Jen Chung, Roland Siegwart, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://ieeexplore.ieee.org/abstract/document/10000088" class="image fit thumb"><img src="images/papers/humanoids22.png" alt="" /></a>
+							<h3>Interactive Disambiguation for Behavior Tree Execution</h3>
+							<p><strong>Matteo Iovino</strong>, Fethiye Irmak Doğan, Iolanda Leite, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://ieeexplore.ieee.org/abstract/document/9900603" class="image fit thumb"><img src="images/papers/roman22.png" alt="" /></a>
+							<h3>Combining Context Awareness and Planning to Learn Behavior Trees from Demonstration</h3>
+							<p>Oscar Gustavsson, <strong>Matteo Iovino</strong>, Jonathan Styrud, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://ieeexplore.ieee.org/abstract/document/9812086" class="image fit thumb"><img src="images/papers/icra22.png" alt="" /></a>
+							<h3>Combining Planning and Learning of Behavior Trees for Robotic Assembly</h3>
+							<p>Jonathan Styrud, <strong>Matteo Iovino</strong>, Mikael Norrlöf, Mårten Björkman, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://ieeexplore.ieee.org/abstract/document/9562088" class="image fit thumb"><img src="images/papers/icra21.png" alt="" /></a>
+							<h3>Learning behavior trees with genetic programming in unpredictable environments</h3>
+							<p><strong>Matteo Iovino</strong>, Jonathan Styrud, Pietro Falco, Christian Smith.</p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://www.sciencedirect.com/science/article/pii/S0921889022000513" class="image fit thumb"><img src="images/papers/survey.png" alt="" /></a>
+							<h3>A survey of Behavior Trees in robotics and AI</h3>
+							<p><strong>Matteo Iovino</strong>, Edvards Scukins, Jonathan Styrud, Petter Ögren, Christian Smith.</p>
+						</article>
+					</div>
+					<ul class="actions">
+						<li><a href="https://scholar.google.com/citations?user=dH2oc1QAAAAJ&hl=en" class="button">Google Scholar</a></li>
+					</ul>
+				</section>
 
 				<!-- Three -->
 				<!--
