Add grant details for research visit

--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
 							<h5>Research Visit</h5>
 							<p>April 2022 - September 2022 | ETH Zurich, Zurich, Switzerland</p>
 						</header>
-						<p><span class="image left"><img src="images/logos/ETH_Logo.png" alt="" /></span>Autonomous System Lab (ASL), led by Prof. Roland Siegwart.</p>
+						<p><span class="image left"><img src="images/logos/ETH_Logo.png" alt="" /></span>
+							Autonomous System Lab (ASL), led by Prof. Roland Siegwart. <br />
+							Receiver of a 150.000 SEK Grant from WASP.
+						</p>
 					</section>
 					<hr />
 					<section>
